--- a/index.html
+++ b/index.html
@@ -23,14 +23,15 @@
       </div>
 
       <div class="password-container">
-        <label for="password"></label>
-        <input type="text" autocomplete="off" id="password" />
+        <label for="password">Password</label>
+        <input type="password" autocomplete="off" id="password" />
+        <p id="progress-bar"></p>
         <span></span>
       </div>
 
-      <div class="pseudo-container">
-        <label for=""></label>
-        <input type="text" autocomplete="off" id="pseudo" />
+      <div class="confirm-container">
+        <label for="confirm">Confirm password</label>
+        <input type="password" autocomplete="off" id="confirm" />
         <span></span>
       </div>
     </form>
