--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
         <input type="password" autocomplete="off" id="confirm" />
         <span></span>
       </div>
+
+      <input type="submit" value="Log In" />
     </form>
 
     <script src="./index.js"></script>
